# WebServer

./: .gitignore  CMakeLists.txt  README.md
domains/: index.html  test.html
domains/Example1/: .htaccess  index.html
domains/Example2/: .htaccess  index.php
domains/Test/: .htaccess  index.html
domains/Test2/: .htaccess  index.html
source/: CMakeLists.txt  main.cpp
source/Debug/: Log.cpp  Log.h
source/Network/: HttpServer.cpp  HttpServer.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  WebServer.cpp  WebServer.h
source/System/: FileManager.cpp  FileManager.h  HtaccessConfig.cpp  HtaccessConfig.h
